--- a/index.html
+++ b/index.html
@@ -41,9 +41,16 @@
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<a href="#" class="image"><img src="images/Bryan.jpg" width="200" height="200" alt="" /></a>
-							<h2>Bryan Agas' Portfolio</h2>
-							<p>Data Analyst skilled in SQL, Excel and Python</p>
+							<a href="#" class="image"><img src="images/Bry.jpg" width="100" height="100" alt="" /></a>
+							<h2>Bryan Agas - Data Analyst</h2>
+							<p>
+							Hard Skills&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Soft Skills<br/>
+							SQL Advance &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Strong Leadership <br/>
+							Excel Advance &nbsp;&nbsp;&nbsp;&nbsp;Teamwork <br/>
+							Power BI Basic &nbsp;&nbsp;&nbsp;&nbsp;Time management <br/>
+							Python Basic <br/>
+							GI Software etc. <br/>
+							</p>
 						</div>
 					</section>
 
@@ -84,10 +91,7 @@
 									<a href="#" class="image"><img src="images/Hobbies.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Hobbies</h2>
-										<p>Keeping up to date with the blockchain development. <br/>
-										Daily meditation practice. <br/>
-										Playing tennis once a week. <br/>
-										Dancing Salsa once a week. <br/></p>
+										<p>I try to stay up to date with the development in blockchain. I also practice meditation daily. I play tennis and dance salsa once a week as well.</p>
 									</div>
 								</div>
 							</section>
@@ -100,15 +104,15 @@
 									<section class="features">
 										<article>
 											<a href="#" class="image"><img src="images/Ipsum.jpg" alt="" /></a>
-											<h3 class="major">Analysis in Excel</h3>
+											<h3 class="major">Analysis using Excel</h3>
 											<p>In this project we analysed the quality of Ipsum water.</p>
 											<a href="#" class="special">Learn more</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
-											<h3 class="major">Nisl placerat</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
+											<a href="https://github.com/DaCalFer/Business-Analytics-Udacity" class="image"><img src="images/Bike.jpg" alt="" /></a>
+											<h3 class="major">Data Analysis using Python</h3>
+											<p>In this project we analysed the bicycle data in Chicago, New York and Washington.</p>
+											<a href="https://github.com/DaCalFer/Business-Analytics-Udacity" class="special">Learn more</a>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
